<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Recharge.Recharge_Mainpage"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:background="#1E90FF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="120dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_recharge_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recharge_main_num"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_recharge_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recharge_main_detail"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:gravity="center"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/bt_recharge"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homepage_user_recharge"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"/>

        <Button
            android:id="@+id/bt_withdraw"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_main_withdraw"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/oval_button"/>

    </LinearLayout>


</LinearLayout>