<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.User.UserInformation_ResetPhoneNumber"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userinformation_phone_editText1"
            android:textSize="@dimen/text_1_size"
            android:layout_margin="15sp"
            android:layout_gravity="center_vertical"
            />

        <View
            android:background="#7A8B8B"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"/>

        <EditText
            android:id="@+id/et_UserPhone_Number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/userinformation_phone_editText2"
            android:textSize="@dimen/text_1_size"/>


    </LinearLayout>


    <Button
        android:id="@+id/bt_UserPhone_Finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/userinformation_phone_next"
        android:textSize="@dimen/btn_1_size"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        style="@style/ButtonBlueRound"
 />

</LinearLayout>