<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Recharge.Recharge_Mainpage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_recharge_mainpage"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/recharge_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="30dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_recharge_mainpage">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/recharge_main_num"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_recharge_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:text="0.00"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_recharge_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recharge_main_detail"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/recharge_info">

        <Button
            android:id="@+id/bt_withdraw"
            style="@style/ButtonWhiteRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:text="@string/homepage_user_recharge" />

        <Button
            android:id="@+id/bt_recharge"
            style="@style/ButtonGreenRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:text="@string/recharge_main_withdraw" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>