<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/oval_card"
    >

    <TextView
        android:layout_marginTop="40dp"
        android:text="@string/task_publish_dialog_title"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginVertical="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">
            
            <com.soft.zkrn.weilin_application.Widget.PickerView
                android:id="@+id/pv_month"
                android:layout_width="150dp"
                android:layout_height="70dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/task_publish_dialog_month"
                android:textSize="@dimen/card_content_size"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            
            <com.soft.zkrn.weilin_application.Widget.PickerView
                android:id="@+id/pv_day"
                android:layout_width="60dp"
                android:layout_height="70dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/task_publish_dialog_day"
                android:textSize="@dimen/card_content_size"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <com.soft.zkrn.weilin_application.Widget.PickerView
                android:id="@+id/pv_hour"
                android:layout_width="60dp"
                android:layout_height="70dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/task_publish_dialog_hour"
                android:textSize="@dimen/card_content_size"
                android:gravity="center"
                />


        </LinearLayout>
        
 

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
        
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="65dp"
        android:orientation="vertical">

        <View
            android:background="#7A8B8B"
            android:layout_width="wrap_content"
            android:layout_height="1sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"/>

        <Button
            android:id="@+id/btn_agree_high_opion"
            android:layout_width="match_parent"
            android:text="@string/task_publish_dialog_sure"
            android:textColor="#000000"
            android:background="@null"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<Button-->
                <!--android:id="@+id/btn_cancel_high_opion"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:text="@string/task_publish_dialog_cancel"-->
                <!--android:background="@null"-->
                <!--android:textColor="#000000"-->
                <!--android:layout_weight="1"/>-->

            <!--<View-->
                <!--android:background="#7A8B8B"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="1sp"/>-->



            <!--<Button-->
                <!--android:id="@+id/btn_agree_high_opion"-->
                <!--android:layout_width="0dp"-->
                <!--android:text="@string/task_publish_dialog_sure"-->
                <!--android:textColor="#000000"-->
                <!--android:background="@null"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"/>-->


        <!--</LinearLayout>-->


    </LinearLayout>



</LinearLayout>