<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_task_module"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Task.TaskModule"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_task_module"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_marginTop="@dimen/pickerview_topbar_height"
        android:id="@+id/rl_task_module"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_task_module"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!--<TextView-->
        <!--android:id="@+id/tv_task"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/tv_task_top"-->
        <!--android:paddingLeft="@dimen/tv_task_left"-->
        <!--android:text="@string/task"-->
        <!--android:textColor="@color/colorText"-->
        <!--android:textSize="40dp" />-->

        <TextView
            android:id="@+id/tv_account_integrals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="@string/account_integrals"
            android:textColor="@color/colorText"
            android:textSize="25dp" />

        <View
            android:id="@+id/divider_task_module"
            style="@style/Divider"
            android:layout_below="@id/tv_account_integrals"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btn_task_center"
            style="@style/ButtonWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_task_module"
            android:layout_alignParentRight="true"
            android:layout_marginVertical="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/task_center" />

        <Button
            android:id="@+id/btn_task_publish"
            style="@style/ButtonWhite"
            android:layout_below="@+id/btn_task_center"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:width="165dp"
            android:height="100dp"
            android:text="@string/task_publish" />

        <Button
            android:id="@+id/btn_task_receive"
            style="@style/ButtonWhite"
            android:layout_below="@+id/btn_task_center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:width="165dp"
            android:height="100dp"
            android:text="@string/task_receive" />

        <View
            android:id="@+id/divider_task_module_2"
            style="@style/Divider"
            android:layout_height="3dp"
            android:layout_below="@id/btn_task_receive"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/tv_task_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_task_module_2"
            android:layout_marginVertical="10dp"
            android:paddingLeft="15dp"
            android:text="@string/task_statistics"
            android:textColor="@color/colorText"
            android:textSize="15dp" />

        <View
            android:id="@+id/divider_task_module_3"
            style="@style/Divider"
            android:layout_height="3dp"
            android:layout_below="@id/tv_task_statistics"
            android:layout_marginTop="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/divider_task_module_3">
            <Button
                android:id="@+id/btn_login_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_white"
                android:text="登陆测试"/>
        </LinearLayout>
    </RelativeLayout>

    <!--<com.google.android.material.bottomnavigation.BottomNavigationView-->
        <!--android:id="@+id/navigation_task_module"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="0dp"-->
        <!--android:layout_marginEnd="0dp"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:menu="@menu/navigation" />-->

</androidx.constraintlayout.widget.ConstraintLayout>